[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/crack_screen.gd" type="Script" id=1]
[ext_resource path="res://assets/graphics/bomb/broken_glass.png" type="Texture2D" id=3]

[sub_resource type="CanvasItemMaterial" id=1]

[sub_resource type="CompressedTexture2D" id=3]
load_path = "res://.import/dirty.png-b79dca06419d51134f6daf05e68db791.stex"

[sub_resource type="CanvasItemMaterial" id=2]

[node name="Node2D" type="Node2D"]
modulate = Color( 1, 1, 1, 0.313726 )
light_mask = 0
position = Vector2( 128, 305 )
script = ExtResource( 1 )

[node name="Sprite2D" type="Sprite2D" parent="."]
light_mask = 0
material = SubResource( 1 )
use_parent_material = true
rotation = 0.785398
scale = Vector2( 1.32, 1.32 )
z_index = 1
texture = SubResource( 3 )
region_rect = Rect2( 64, 64, 64, 64 )

[node name="Sprite2" type="Sprite2D" parent="."]
light_mask = 0
material = SubResource( 2 )
rotation = 0.785398
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 3 )
region_rect = Rect2( 64, 64, 64, 64 )

[node name="anim_color" type="Tween" parent="."]

[connection signal="tween_all_completed" from="anim_color" to="." method="_on_anim_color_completed"]
